--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,6 +12,10 @@
   background-color: $dark-10;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 button {
   cursor: pointer;
 }
